# libpressio_tutorial

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  build_container.py  spack.yaml
exercises/0_installation/: README.md
exercises/1_basics/: README.md
exercises/1_basics/c/: .gitignore  CMakeLists.txt  Makefile  basics.c  get_compressor_options.c  list_compressors.c
exercises/1_basics/cli/: basics.sh  list_compressors.sh  list_options.sh
exercises/1_basics/cxx/: CMakeLists.txt  basics.cc  get_compressor_options.cc  list_compressors.cc
exercises/1_basics/python/: basics.py  get_compressor_options.py  list_compressors.py
exercises/2_comparing_compressors/: README.md  visualize.py
exercises/2_comparing_compressors/python/: comparing_compressors.py
exercises/3_external_metrics/: README.md
exercises/3_external_metrics/c/: .gitignore  CMakeLists.txt  Makefile  external_metric.c  run_external.c
exercises/3_external_metrics/python/: external_metric.py  run_external.py
exercises/4_libpressio_opt/: README.markdown
exercises/4_libpressio_opt/c/: .gitignore  CMakeLists.txt  Makefile  opt_zfp_perf.c
exercises/5_writing_basic_compressors/: .gitignore  CMakeLists.txt  Makefile  README.markdown  pressio_runlength_base.cc  pressio_runlength_solution.cc  runlength.h  test_pressio_base.cc  test_runlength.cc
exercises/6_writing_meta_compressors/: .gitignore  CMakeLists.txt  Makefile  README.markdown  pressio_typeswitch_base.cc  pressio_typeswitch_solution.cc  test_pressio_base.cc
exercises/7_gpu_compressors/: README.md
exercises/7_gpu_compressors/c/: CMakeLists.txt  zfp_gpu.c
exercises/datasets/: CLOUDf48.bin.f32
